# example_cmake_lib

./: CMakeLists.txt  README.md  main.cpp
example_lib/: CMakeLists.txt  example_lib.cpp  example_lib.h
example_so/: CMakeLists.txt  example_so.cpp  example_so.h
